<resources>
    <string name="user_name">User Name (email)</string>
    <string name="password">Password</string>
    <string name="demo_try">Visitor Mode</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="forget_pw">Forget Password</string>
    <string name="email">Email</string>
    <string name="reenter_pw">Please input password again.</string>
    <string name="no_dev">No Device Connected</string>
    <string name="back_measure">Back to measure</string>
    <string name="measure">Measure</string>
    <string name="calibration">Calibration</string>
    <string name="data">Data</string>
    <string name="setting">Settings</string>
    <string name="info">Information</string>
    <string name="associated_devices">Associated Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="searching_for_devices">Searching For Devices …</string>
    <string name="save">Save</string>
    <string name="hold">Hold</string>
    <string name="hold_uppercase">HOLD</string>
    <string name="calibrated_points">Calibrated Points</string>
    <string name="zero_potential">Offset</string>
    <string name="slop">Slope</string>
    <string name="last_calibbration">Last Calibration</string>
    <string name="sn">SN</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="value">Value</string>
    <string name="temp">Temp.</string>
    <string name="salinity">Salinity</string>
    <string name="resistivity">Resistivity</string>
    <string name="general">General</string>
    <string name="parameter">Parameter</string>
    <string name="data_storage">Data Storage</string>
    <string name="alarm">Alarm</string>
    <string name="logout">Log Out</string>
    <string name="temp_unit">Temperature Unit</string>
    <string name="auto_hold">Automatic Hold</string>
    <string name="stable_reading_standard">Stable Reading Standard</string>
    <string name="calibration_reminder">Calibration Reminder</string>
    <string name="backlight_time">Backlight Time</string>
    <string name="auto_power_off">Automatic Power-off</string>
    <string name="factory_reset">Reset to Factory Default</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="conductivity_rang">Conductivity range</string>
    <string name="orp_range">ORP range</string>
    <string name="ph_range">pH range</string>
    <string name="resistivity_range">Resistivity range</string>
    <string name="salinity_range">Salinity range</string>
    <string name="tds_range">TDS range</string>
    <string name="all_data">All Data</string>
    <string name="measuring_value">Measuring Values</string>
    <string name="time_data">Time/Data</string>
    <string name="date_time">Date/Time</string>
    <string name="serial_no">Serial Number</string>
    <string name="temperature">Temperature</string>
    <string name="calibration_records">Calibration Records</string>
    <string name="electrode_model">Electrode Model</string>
    <string name="gps_loaction">GPS Location</string>
    <string name="information">Information</string>
    <string name="ele_info">Electrode Information</string>
    <string name="ele_model">Electrode Model</string>
    <string name="measuring_parameters">Measuring Parameters</string>
    <string name="ele_life">Electrode Condition</string>
    <string name="suitable_app">Suitable Application</string>
    <string name="other_ele">Compatible/Interchangeable Sensors</string>
    <string name="other_ele1">Compatible Sensors</string>
    <string name="ins_info">Instrument information</string>
    <string name="ins_model">Instrument Model</string>
    <string name="ins_sn">Instrument Serial Number</string>
    <string name="factory_calibration_date">Factory Calibration Date</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="conductivity">Conductivity</string>
    <string name="send">Send</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="operation_flow">Calibration Flow</string>
    <string name="wait_readings">Please wait for stable readings</string>
    <string name="select_buffer_solution">Select buffer solution</string>
    <string name="num3_ph7">Dip into 7.00 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph4">Dip into 4.00 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph41">Dip into 4.01 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph918">Dip into 9.18 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph1001">Dip into 10.01 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph168">Dip into 1.68 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph1245">Dip into 12.45 pH solution, stir gently and let it stand still</string>
    <string name="num3_ph686">Dip into 6.86 pH solution, stir gently and let it stand still</string>
    <string name="num3_168">Dip into 1.68 pH solution, stir gently and let it stand still</string>
    <string name="num3_1246">Dip into 12.46 solution, stir gently and let it stand still</string>
    <string name="num3_1413">Dip into 1413 solution, stir gently and let it stand still</string>
    <string name="num3_84">Dip into 84 solution, stir gently and let it stand still</string>
    <string name="num3_1288">Dip into 12.88 solution, stir gently and let it stand still</string>
    <string name="finish_cailbration">Press ENT to finish calibration</string>
    <string name="not_recognize">Cannot recognize standard solutions</string>
    <string name="temp_degree_c">℃</string>
    <string name="zen_temp_degree_f">℉</string>
    <string name="note">Note</string>
    <string name="n_hits">%d Reminders (Click for details)</string>
    <string name="one_hits">1 Reminder (Click for details)</string>
    <string name="type">Type</string>
    <string name="timer_set">Time Set</string>
    <string name="auto_save">Auto. Save</string>
    <string name="name">Asset</string>
    <string name="admin">Admin</string>
    <string name="notes">Notes</string>
    <string name="photo">Attached photo</string>
    <string name="add">Add</string>
    <string name="change_password">Change Password</string>
    <string name="sign_up">Register</string>
    <string name="submit">Submit</string>
    <string name="verify_code">Verification Code</string>
    <string name="get_verify_code">Get Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="known">OK</string>
    <string name="send_file">Send Data</string>
    <string name="rinse_the_probe">Rinse off the probe</string>
    <string name="shake_dry_or_dry_with_tissue">Shake-dry or blot-dry (NEVER rub the sensor)</string>
    <string name="after">After</string>
    <string name="seconds">Second(s)</string>
    <string name="minutes">Minute(s)</string>
    <string name="self_diagnosis">Self-Diagnosis</string>
    <string name="possible_problems_and_how_to_fix">Potential problems and how to fix</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout_the_account">Logout the account!</string>
    <string name="yes_logout">Yes,Logout!</string>
    <string name="reminder">Reminder</string>
    <string name="buffer_class_selection">Buffer Class Selection</string>
    <string name="resolution">Resolution</string>
    <string name="ref_temperature">Reference Temp.</string>
    <string name="temp_coeff">Temp. Comp. Factor</string>
    <string name="due_calib">Calibration Reminder</string>
    <string name="factory_reset_default">Reset to Factory Default</string>
    <string name="tds_factor">TDS Factor</string>
    <string name="salt_unit">Salt Unit</string>
    <string name="yes_factory_reset">Yes,factory reset.</string>
    <string name="input">Input</string>
    <string name="empty_str">The string is empty</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="exists">Existed</string>
    <string name="add_to_category">Add to Category</string>
    <string name="not_calibrated">%s dosn`t need to be calibrated</string>
    <string name="unhold">Unhold</string>
    <string name="unit_err">Unit is wrong</string>
    <string name="value_err">Value is wrong</string>
    <string name="location">Location</string>
    <string name="salinity_type">Salinity Type</string>
    <string name="salt_type">Salinty Type</string>
    <string name="life_excellent">Excellent</string>
    <string name="life_good">Good</string>
    <string name="life_ok">OK</string>
    <string name="life_replacement">Replacement needed</string>
    <string name="account_should_be_mail_address">Account should be email address!</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="reenter_password_is_incorrect">Please input password again.</string>
    <string name="password_is_not_match">Two passwords should be the same.</string>
    <string name="register_success">Registration completed.</string>
    <string name="login_fail">Unable to register</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="username_is_not_email">Account should be email address!</string>
    <string name="password_is_empty_or_space">Password is empty or contains space</string>
    <string name="not_need_caslib">When conductivity calibrate finish, TDS, Salinity or Resistivity auto calibrated </string>
    <string name="err1">Cannot recognize standard solutions</string>
    <string name="err2">Please wait for a stable reading before pressing ENT</string>
    <string name="err3">Readings being unstable for a long time</string>
    <string name="err4"><![CDATA[ pH Electrode zero potential of pH probe out of range（<60mV or>60mV）]]></string>
    <string name="err5" formatted="false"><![CDATA[Slope of pH probe out of range（<85% or >110%）]]></string>
    <string name="err6">Time to perform calibration</string>
    <string name="Assect_Save">Save</string>
    <string name="Assect_change">Asset Editing</string>
    <string name="Asset_EnterName">Enter Asset Name Here</string>
    <string name="Asset_AddImage">Add a photo of your asset</string>
    <string name="Privacy_sta">《Privacy Statement》</string>
    <string name="Agreement_title">《Service Agreement》</string>
    <string name="Agreement_agree">Agree</string>
    <string name="Agreement_agreeNo">Disagree and Exit</string>
    <string name="Agreement_agreetitle">Service Agreement and Privacy Policy</string>
    <string name="Agreement_agreetext">\u3000\u3000Please make sure to carefully read and fully understand the terms of the "Service Agreement" and "Privacy Policy," including but not limited to: in order to provide you with services such as data storage, data testing location, measurement samples, and Bluetooth connection, we need to collect your photos and media, location information, and Bluetooth data. You can view, modify, delete personal information, and manage your authorizations in the "Settings." You can read the "Service Agreement," "Privacy Policy," and "Permission Usage Guidelines" for detailed information. If you agree, please click "Accept" to start using our services.</string>
</resources>