<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/lv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/sn"
            android:textSize="12sp"
            android:textColor="@android:color/black" />

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@android:color/black" />

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="@android:color/black" />

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/value"
            android:textSize="12sp"
            android:textColor="@android:color/black" />

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>