<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="125dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/lv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colHeader1"
                android:gravity="center"
                android:text="@string/sn"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colHeader2"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colHeader1"
                android:gravity="center"
                android:text="@string/time"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colHeader2"
                android:gravity="center"
                android:text="@string/value"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colHeader1"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="12sp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lv_title"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp">
        </ListView>
    </RelativeLayout>
</RelativeLayout>